--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="Seccion">
             <h2 class="subtitulos">Octubre 14, 2020</h2>
             <div class="JF"><img title="Nos gustaba ir a ese parque" src="img/IMG_20201014_200957.jpg" alt="Parque Sta.Rosa" width="250"></div>
-            <div class="JF_V"><video src="video/VID_20201014_200331.mp4" autoplay controls loop width="188">No se puede reproducir el video</video></div>
+            <div class="JF_V"><video src="video/VID_20201014_200331.mp4" controls loop width="188">No se puede reproducir el video</video></div>
             <p class="contenido">
                 En definitiva pienso que somos tal para cual, jamas crei llegar a encontrar alguin tan
                 perfecta para mi, compaginamos en muchas cosas y eso hace que la relacion haya ido por 
@@ -142,7 +142,7 @@
             </p>
         </div>  
         <div class="subseccion">            
-            <div class="JF_V"><video src="video/VID_20220226_190916.mp4" autoplay controls loop width="250">No se puede reproducir el video</video></div>
+            <div class="JF_V"><video src="video/VID_20220226_190916.mp4" controls loop width="250">No se puede reproducir el video</video></div>
             <div class="JF"><img title="" src="img/986A6DDB-7F68-49F2-9E7F-8C9CD98CD5C8.jpg" alt="" width="250"></div>            
             <div class="JF"><img title="" src="img/IMG_0055.jpg" alt="" width="250"></div>            
             <p class="contenido">
@@ -182,11 +182,11 @@
             <div class="JF"><img title="" src="img/IMG-20210801-WA0021.jpg" alt="" width="250"></div>
                <p>
                 .....................................
-               </p>
+               </p>               
         </div>              
     </div>        
     </body>
-    <footer>        
-        <iframe class="Spotify" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0z3huwBPxTNnG76SmeAJyJ?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <footer>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0z3huwBPxTNnG76SmeAJyJ?utm_source=generator&theme=0" frameBorder="0" allowtransparency="true" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </footer>
 </html>
