--- a/index.html
+++ b/index.html
@@ -183,10 +183,13 @@
                <p>
                 .....................................
                </p>               
-        </div>              
+        </div>
+    <div class="spotify">
+        <iframe class="spotifyy" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0z3huwBPxTNnG76SmeAJyJ?utm_source=generator&theme=0" width="340" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+     </div>
     </div>        
     </body>
-    <footer>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0z3huwBPxTNnG76SmeAJyJ?utm_source=generator&theme=0" frameBorder="0" allowtransparency="true" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <footer>        
+       
     </footer>
 </html>
