--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J.F. 19-09-2020</title>    
 </head>
-<body>       
-    <header>
-        <!--font awesome-->
-        <img class="logo" src="/img/logo.jpg" alt="logo">
+<body> 
+    <div class="container">
+        <span class="loader"></span>
+    </div>      
+    <header>                
+        <a class="message" href="https://wa.me/528714367997" target="_blank"><i class="bi bi-person-heart"></i></a>        
         <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">            
             <button id="cerrar" class="cerrarMenu"><i class="bi bi-x"></i></button>
             <img class="logo2" src="/img/logo.jpg" alt="logo">
             <ul class="nav-list">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#">Metas</a></li>
+                <li><a href="/index.html">Inicio <i class="bi bi-envelope-heart"></i></a></li>
+                <li><a href="https://drive.google.com/drive/folders/13nc14oPZKfWFu2peFIrS1tcLGCZZgKPT" target="_blank">Galeria <i class="bi bi-valentine"></i></a></li>
+                <li><a href="#">Metas <i class="bi bi-house-heart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -207,6 +209,7 @@
 <div class="spotify-embeds">
     <div class="spotify-embed"><iframe src="https://open.spotify.com/embed/playlist/0z3huwBPxTNnG76SmeAJyJ?utm_source=generator&theme=0" width="340" height="80" frameborder="0" allowtransparency="true"></iframe></div>        
 </div>
+    <script src="/javascript/loader.js"></script>
     <script src="/javascript/side-bar.js"></script>
     <script src="/javascript/embed_sopotify.js"></script> 
 </body>
