--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="fonts/Quicksand/static/Quicksand-Regular.ttf" rel="stylesheet">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css"> 
     <meta charset="UTF-8">
@@ -12,21 +12,22 @@
 </head>
 <body> 
     <div class="container">
-        <span class="loader"></span>
-    </div>      
-    <header>                
-        <a class="message" href="https://wa.me/528714367997" target="_blank"><i class="bi bi-person-heart"></i></a>        
-        <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
-        <nav class="nav" id="nav">            
-            <button id="cerrar" class="cerrarMenu"><i class="bi bi-x"></i></button>
-            <img class="logo2" src="/img/logo.jpg" alt="logo">
-            <ul class="nav-list">
-                <li><a href="/index.html">Inicio <i class="bi bi-envelope-heart"></i></a></li>
-                <li><a href="https://drive.google.com/drive/folders/13nc14oPZKfWFu2peFIrS1tcLGCZZgKPT" target="_blank">Galeria <i class="bi bi-valentine"></i></a></li>
-                <li><a href="#">Metas <i class="bi bi-house-heart"></i></a></li>
-            </ul>
-        </nav>
-    </header>
+        <span class="loader"></span>  
+    </div>  
+        <header>                
+            <a class="message" href="https://wa.me/528714367997" target="_blank"><i class="bi bi-person-heart"></i></a>
+            <a class="icon"><i class="fa-light fa-rings-wedding fa-fade"></i></a>
+            <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
+            <nav class="nav" id="nav">            
+                <button id="cerrar" class="cerrarMenu"><i class="bi bi-x"></i></button>
+                <img class="logo2" src="/img/logo.jpg" alt="logo">
+                <ul class="nav-list">
+                    <li><a href="/index.html">Inicio <i class="bi bi-envelope-heart"></i></a></li>
+                    <li><a href="https://drive.google.com/drive/folders/13nc14oPZKfWFu2peFIrS1tcLGCZZgKPT" target="_blank">Galeria <i class="bi bi-valentine"></i></a></li>
+                    <li><a href="#">Metas <i class="bi bi-house-heart"></i></a></li>
+                </ul>
+            </nav>
+        </header>    
     <h1 class="titulos">Fer & Jaz <i class="bi bi-suit-heart-fill"></i></h1> 
     <div class="Seccion">
         <h2 class="subtitulos">Septiembre 6, 2020</h2>
