--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <a class="icon"><i class="fa-light fa-rings-wedding fa-fade"></i></a>
             <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
             <nav class="nav" id="nav">            
-                <button id="cerrar" class="cerrarMenu"><i class="bi bi-x"></i></button>
-                <img class="logo2" src="/img/logo.jpg" alt="logo">
+                <button id="cerrar" class="cerrarMenu"><i class="bi bi-x"></i></button>            
                 <ul class="nav-list">
                     <li><a href="/index.html">Inicio <i class="bi bi-envelope-heart"></i></a></li>
                     <li><a href="https://drive.google.com/drive/folders/13nc14oPZKfWFu2peFIrS1tcLGCZZgKPT" target="_blank">Galeria <i class="bi bi-valentine"></i></a></li>
@@ -28,7 +27,8 @@
                 </ul>
             </nav>
         </header>    
-    <h1 class="titulos">Fer & Jaz <i class="bi bi-suit-heart-fill"></i></h1> 
+    <h1 class="titulos">Fer & Jaz</i></h1> 
+    <h2 class="heart"><i class="bi bi-suit-heart-fill"></i></h2>
     <div class="Seccion">
         <h2 class="subtitulos">Septiembre 6, 2020</h2>
         <div class="JF"><img title="Salida a nueves Sta.Rosa" src="img/IMG_20200906_223952.jpg" alt="Wingstop" width="250"></div>
@@ -64,7 +64,7 @@
     <div class="Seccion">
         <h2 class="subtitulos">Octubre 14, 2020</h2>
         <div class="JF"><img title="Nos gustaba ir a ese parque" src="img/IMG_20201014_200957.jpg" alt="Parque Sta.Rosa" width="250"></div>
-        <div class="JF_V"><video src="video/VID_20201014_200331.mp4" controls loop width="188">No se puede reproducir el video</video></div>
+        <div class="JF_V"><video src="video/VID_20201014_200331.mp4" controls loop width="250">No se puede reproducir el video</video></div>
         <p class="contenido">
             En definitiva pienso que somos tal para cual, jamas crei llegar a encontrar alguin tan
             perfecta para mi, compaginamos en muchas cosas y eso hace que la relacion haya ido por 
@@ -125,7 +125,7 @@
             pero fue de los dias que no he olvidado.   
             <div class="subseccion"><br>                    
             <h2 class="subtitulos">Graduacion de Jaz</h2>
-            <div class="JF"><img title="Mi enfemera" src="img/IMG-20210710-WA0003.jpg" alt="" width="250"> <div class="JF"></div>
+            <div class="JF"><img title="Mi enfemera" src="img/IMG-20210710-WA0003.jpg" alt="" width="250"></div>
             <p class="contenido">
             Durante bastante tiempo esperaba que llegara el dia de llegar a verla en su graduacion,
             ser parte de ese momento tan importante en su vida, verla vestida de enferma y verla como 
@@ -179,31 +179,27 @@
            </p> 
         <div class="JF"><img title="" src="img/IMG_0137.jpg" alt="" width="250"></div>
            <p  class="contenido">
-            <p >
-            Ambos sabemos que las cosas en el futuro podrian volverse complicadas, pero esos problemas
-            que nos ponga el futuro me encantaria poder afrontarlos junto con ella...                             
+                Ambos sabemos que las cosas en el futuro podrian volverse complicadas, pero esos problemas
+                que nos ponga el futuro me encantaria poder afrontarlos junto con ella...                             
            </p> 
         <div class="JF"><img title="" src="img/IMG_0277.jpg" alt="" width="250"></div>
            <p  class="contenido">
-            <p >
-            El simple hecho de llevarnos tan bien, llevar una relacion sana, tener la comunicacion
-            es lo que ha fortalizido nuestra relacion...
+                El simple hecho de llevarnos tan bien, llevar una relacion sana, tener la comunicacion
+                es lo que ha fortalizido nuestra relacion...
            </p> 
         <div class="JF"><img title="" src="img/IMG_0343.jpg" alt="" width="250"></div>
            <p  class="contenido">
-            <p >
-            Se lo he dicho anteriormente y lo sostengo, ella es la persona con quien quiero 
-            pasar el resto de mi vida...
+                Se lo he dicho anteriormente y lo sostengo, ella es la persona con quien quiero 
+                pasar el resto de mi vida...
            </p>
         <div class="JF"><img title="" src="img/IMG_1030.jpg" alt="" width="250"></div>
            <p  class="contenido">
-            Te amo como no tienes una idea, lo que haces sentir dentro de mi al verte es 
-            una alegria tan grande que me es dificil de explicar y es por eso me encantaria que 
-            me consecieras el honor de...   
+                Te amo como no tienes una idea, lo que haces sentir dentro de mi al verte es 
+                una alegria tan grande que me es dificil de explicar y es por eso me encantaria que 
+                me consecieras el honor de...   
            </p>
         <div class="JF"><img title="" src="img/IMG-20210801-WA0021.jpg" alt="" width="250"></div>
            <p>
-            .....................................
            </p>               
     </div>    
 </div> 
