--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css"> 
     <meta charset="UTF-8">
-    <meta name=”theme-color” content="ff00aa" />
+    <meta name="theme-color" content="#ff00aa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J.F. 19-09-2020</title>    
