--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </P>
     </div>  
     <div class="Seccion">    
-        <h2 class="subtitulos">Septiembre 23,2020</h2>
+        <h2 class="subtitulos">Septiembre 23, 2020</h2>
         <div class="JF"><img title="Salida a nueves Sta.Rosa" src="img/IMG_20200923_202830.jpg" alt="StaRosa" width="250"></div>
         <div class="JF"><img title="" src="img/IMG_20200923_202701.jpg" alt="StaRosa" width="250"></div>
         <p class="contenido">
