--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </p> 
                     <br>                
                 <div class="images">
-                    <div class="JF"><img title="" src="img/PTUVE3430.jpg" alt="" width="325"></div>
+                    <div class="JF"><img title="" src="img/PTUVE3430.JPG" alt="" width="325"></div>
                     <div class="JF"><img title="" src="img/IMG-20210509-WA0037.jpg" alt="" width="325"></div>
                 </div>
             </div>             
