--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                         conseguirlo
                     </p> 
                     <br>
-                    <p>
-                       Por eso quiero hacerte una pregunta...
-                    </p>
+                    //<p>
+                       //Por eso quiero hacerte una pregunta...
+                    //</p>
                 <div class="images">
                     <div class="JF"><img title="" src="img/IMG-20210801-WA0021.jpg" alt="" width="325"></div>
                     <div class="JF"><video src="img/2023-05-03.mp4" controls loop width="325">No se puede reproducir el video</video></div>
