--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br>
             <h2 class="heart"><i class="bi bi-suit-heart-fill"></i></h2>
             <br>
-            <em>Para la mujer de mi sueños, la mas hermosa y amor de mi vida</em>
+            <em>Para la mujer de mi sueños, la mas hermosa y el amor de mi vida</em>
         </div>  
     </div> 
    <div class="banner2">
@@ -209,3 +209,4 @@
     </div>
 </footer>
 </html>
+
