--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css"> 
-    <title>J.F. 19-09-2020</title>    
+    <title>J.F. 19-09-2020 <a class="icon"><i class="<i class="fa-thin fa-rings-wedding"></i>"></i></a></title>    
 </head>
 <body> 
     <div class="container">
@@ -209,4 +209,5 @@
     </div>
 </footer>
 </html>
+
 
