--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css"> 
-    <link rel="icon" type="image/x-icon" href="marriage_proposal_ring.ico">
+    <link rel="icon" type="image/x-icon" href="./img/marriage_proposal_ring.ico">
     <title>J.F. 19-09-2020</title>    
 </head>
 <body> 
